--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
 		stage('Deploy') {
             		steps {
                 		echo 'Deploying....'
+				sh 'docker build -t socketio_deploy -f deploy_dockerfile_socketio .'
             		}
         	}
 	}
